--- a/notebooks/ФД1_clustering_graph.ipynb
+++ b/notebooks/ФД1_clustering_graph.ipynb
@@ -17,11 +17,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Clustering of the graph\n",
+        "# Clustering of the urban graph\n",
         "\n",
-        "
-We need to cluster the urban graph into subclusters given a graph. This will allow us to understand further the patterns of the city, which we will need to modify further on. 
-Before doing optimisation we are splitting the graph into separate subclusters."
+        "We need to cluster the urban graph into subclusters given a graph. This will allow us to understand further the patterns of the city, which we will need to modify further on.\n",
+        "\n",
+        "Before doing optimisation we are splitting the graph into separate subclusters."
       ],
       "metadata": {
         "id": "olg_R3bkEm6F"
